# programmer-trending

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  programmer_trending.db  pyproject.toml
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: chat.py  crawl.py  items.py  sources.py  summaries.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/crawlers/: __init__.py  base.py  hackernews.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 80a7b12ab76f_add_comprehensive_summary_status_.py  9b424b5e7b81_initial_migration_with_complete_model_.py  c541cad41149_initial_migration.py  cc999bd9c395_add_translated_title_to_summary_table.py
backend/app/models/: __init__.py  item.py  source.py  summary.py
backend/app/schemas/: __init__.py  chat.py  common.py  item.py  source.py  summary.py
backend/app/services/: ai_service.py  chat_service.py  crawl_service.py  summary_service.py
backend/app/tasks/: scheduler.py  summary_generator.py
backend/migrations/: env.py
docs/: development-plan.md
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: ApiKeySettings.tsx  ChatInput.tsx  DiscussionCartButton.tsx  DiscussionListModal.tsx  Header.tsx  ItemCard.tsx  ItemFilters.tsx  ItemList.tsx  ItemMeta.tsx  ItemTitle.tsx  Layout.tsx  MessageBubble.tsx  SourceTabs.tsx
(+12 files in other folders)
