[project]
name = "programmer-trending-backend"
version = "0.1.0"
description = "Programmer Trending Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "apscheduler",
    "python-multipart",
    "python-dotenv",
    "asyncpg",
    "aiosqlite",
    "google-genai>=1.31.0",
]

[project.optional-dependencies]
dev = ["uv", "ruff", "pre-commit", "black", "isort", "mypy"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
